admin management updated